fix ui bug(z-index)

--- a/src/components/did/style.css
+++ b/src/components/did/style.css
@@ -1,3 +1,3 @@
-.custom-select {
+.crypto-address-area {
     z-index: 9;
 }
